[gd_scene load_steps=4 format=3 uid="uid://bkygfxo5vhqsy"]

[ext_resource type="Script" path="res://addons/escoria-dialog-simple/chooser/simple.gd" id="1"]

[sub_resource type="Gradient" id="1"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[node name="text_dialog_choice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 1280.0
offset_bottom = 900.0
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerProgress" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 0
anchor_right = 1.0
nine_patch_stretch = true
texture_progress = SubResource("2")

[node name="AvatarContainer" type="Node2D" parent="."]
position = Vector2(94, 68)

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
